// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HoverOverlay actions and hover empty 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    >
      <small
        class="hoverEmpty"
      >
        No hover information available.
      </small>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay actions and hover error 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    >
      <div
        aria-live="polite"
        class="hoverError"
        role="alert"
      >
        M2
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay actions and hover loading 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents hoverOverlayContentsLoading"
      data-testid="hover-overlay-contents"
    >
      <div
        class="loaderRow"
      >
        <div
          class="loadingSpinner"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay actions and hover present 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    >
      <span
        class="hoverOverlayContent hoverOverlayContent test-tooltip-content"
        data-testid="hover-overlay-content"
      >
        <p>
          v
        </p>
        

      </span>
    </div>
    <div
      class="actions"
    >
      <div
        class="actionsInner"
      >
        <a
          class="test-action-item action test-tooltip-untitled"
          href=""
          role="button"
          tabindex="0"
        >
            
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay actions and hover undefined 1`] = `<DocumentFragment />`;

exports[`HoverOverlay actions empty 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    />
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay actions error 1`] = `<DocumentFragment />`;

exports[`HoverOverlay actions error, hover present 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    >
      <span
        class="hoverOverlayContent hoverOverlayContent test-tooltip-content"
        data-testid="hover-overlay-content"
      >
        <p>
          v
        </p>
        

      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay actions loading 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    />
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay actions present 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    />
    <div
      class="actions"
    >
      <div
        class="actionsInner"
      >
        <a
          class="test-action-item action test-tooltip-some-title"
          href=""
          role="button"
          tabindex="0"
        >
           Some title 
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay actions present, hover loading 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents hoverOverlayContentsLoading"
      data-testid="hover-overlay-contents"
    >
      <div
        class="loaderRow"
      >
        <div
          class="loadingSpinner"
        />
      </div>
    </div>
    <div
      class="actions"
    >
      <div
        class="actionsInner"
      >
        <a
          class="test-action-item action test-tooltip-untitled"
          href=""
          role="button"
          tabindex="0"
        >
            
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay actions, hover and alert present 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    >
      <span
        class="hoverOverlayContent hoverOverlayContent test-tooltip-content"
        data-testid="hover-overlay-content"
      >
        <p>
          v
        </p>
        

      </span>
    </div>
    <div
      class="hoverOverlayAlerts"
    >
      <div
        aria-live="polite"
        class="alert"
        role="alert"
      >
        <span
          class="hoverOverlayContent hoverOverlayContent"
          data-testid="hover-overlay-content"
        >
          <p>
            Testing 
            <code>
              markdown
            </code>
             rendering.
          </p>
          

        </span>
        <div
          class="alertDismiss"
        >
          <a
            class=""
            href=""
            role="button"
          >
            <small>
              Dismiss
            </small>
          </a>
        </div>
      </div>
    </div>
    <div
      class="actions"
    >
      <div
        class="actionsInner"
      >
        <a
          class="test-action-item action test-tooltip-untitled"
          href=""
          role="button"
          tabindex="0"
        >
            
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay hover empty 1`] = `<DocumentFragment />`;

exports[`HoverOverlay hover error 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    >
      <div
        aria-live="polite"
        class="hoverError"
        role="alert"
      >
        M
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay hover error, actions present 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    >
      <div
        aria-live="polite"
        class="hoverError"
        role="alert"
      >
        M
      </div>
    </div>
    <div
      class="actions"
    >
      <div
        class="actionsInner"
      >
        <a
          class="test-action-item action test-tooltip-untitled"
          href=""
          role="button"
          tabindex="0"
        >
            
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay hover loading 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents hoverOverlayContentsLoading"
      data-testid="hover-overlay-contents"
    >
      <div
        class="loaderRow"
      >
        <div
          class="loadingSpinner"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay hover present 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    >
      <span
        class="hoverOverlayContent hoverOverlayContent test-tooltip-content"
        data-testid="hover-overlay-content"
      >
        <p>
          v
        </p>
        

      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay hover present, actions loading 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    >
      <span
        class="hoverOverlayContent hoverOverlayContent test-tooltip-content"
        data-testid="hover-overlay-content"
      >
        <p>
          v
        </p>
        

      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay multiple hovers present 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    >
      <span
        class="hoverOverlayContent hoverOverlayContent test-tooltip-content"
        data-testid="hover-overlay-content"
      >
        <p>
          v
        </p>
        

      </span>
      <hr />
      <span
        class="hoverOverlayContent hoverOverlayContent test-tooltip-content"
        data-testid="hover-overlay-content"
      >
        <p>
          v2
        </p>
        

      </span>
    </div>
  </div>
</DocumentFragment>
`;
